--- a/index.css
+++ b/index.css
@@ -65,6 +65,13 @@ main{
 /* modal */
   
 .modal {
+    display: none;
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
     height: 420px;
     width: 350px;
     border-radius: 5px;
